<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ed_msgs</name>
  <version>0.0.0</version>
  <description>The ed_msgs package</description>

  <maintainer email="amigo@tue.nl">Matthijs van der Burgh</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>tue_serialization</depend>
  <depend>geometry_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>

  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
